@@ -5,3 +5,8 @@ Migration
    :members:
    :undoc-members:
    :show-inheritance:
+
+.. autoclass:: jelastic.api.migration._Migration
+   :members:
+   :undoc-members:
+   :show-inheritance:
